添加SuppressWarings("unchecked"),取消布隆过滤器统计添加次数的方法，pom文件版本更新